[metadata]
# replace with your username:
name = linktap-dearlove
version = 0.0.4
author = Andrew Dearlove
author_email = github@dearlove.email
description = Linktap API Python library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dearlove/python-linktap
project_urls =
    Bug Tracker = https://github.com/dearlove/python-linktap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = linktap
install_requires = requests
python_requires = >=3.6
